# easter-egg

./: Cargo.toml
src/: colored_union_find.rs  colors.rs  eclass.rs  egraph.rs  language.rs  lib.rs  machine.rs  macros.rs  multipattern.rs  pattern.rs  rewrite.rs  run.rs  subst.rs  unionfind.rs  util.rs
tests/: lambda.rs
