[package]
name = "easter-egg"
version = "0.1.1-dev"
authors = ["Max Willsey <me@mwillsey.com>", "Eytan Boaz Singher <e@singher.co.il>"]
edition = "2018"
description = "An implementation of colored egraphs"
repository = "https://github.com/eytans/easter-egg"
readme = "README.md"
license = "MIT"
keywords = ["e-graphs"]
categories = ["data-structures"]

[dependencies]
symbolic_expressions = "5"
log = "0.4"
smallvec = "1"
indexmap = "2.8"
instant = "0.1"
once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"

# for the reports feature
multimap = "0.10.0"
itertools = "0.14.0"
either = "1.9.0"
global_counter = "0.2.1"
bimap = "0.6.2"
bitvec = "1.0.0"
invariants = {path = "../rust-invariants"}
# for very silly reasons
num-traits = "0.2.15"
ordered-float = "5.0"
lazy_static = "1.4.0"
thiserror = "2.0"
serde_json = "1.0.100"
regex = "1.9.1"
rayon = { version = "1.10.0", optional = true }
crossbeam = { version = "0.8.4", optional = true, features = ["crossbeam-channel"] }
num_cpus = "1.16.0"
derive-new = "0.7.0"
maplit = "1.0.2"
derive_more = {version = "2.0", features = ["display"]}
as-any = "0.3.2"
symbol_table = { version = "0.4.0", features = ["global"] }

[dev-dependencies]
env_logger = {version = "0.11", default-features = false}

[features]
default = ["parallel"]
#default = ["colored_no_cremove"]
#default = ["colored_no_cmemo"]
upward-merging = []
wasm-bindgen = [ "instant/wasm-bindgen" ]
reports = []
colored_no_cremove = []
colored_no_cmemo = ["colored_no_cremove"]
keep_splits = []
parallel = ["rayon", "crossbeam", "concurrent_cufind"]
concurrent_cufind = []
invariants-off = ["invariants/off"]
serde = ["smallvec/serde", "indexmap/serde", "either/serde", "bimap/serde", "ordered-float/serde", "symbol_table/serde"]
